--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs-extra": "^11.1.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "nodemailer": "^6.9.7"
   }
 }
